--- a/donate.html
+++ b/donate.html
@@ -39,7 +39,7 @@
 
 <!--  ############################################################################################################################################################################################# -->
   <!-- Primary Meta Tags -->
-  <title>TIFC</title>
+  <title>TIFC - Donate</title>
   <meta name="title" content="The Ilahi Foundation of Canada">
   <meta name="description" content="Helping the needy, one city at a time">
   <meta name="keywords" content="Pakistan, Clean Water, education">
@@ -77,6 +77,7 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="donate.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 
@@ -97,13 +98,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="">About Us <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://wwww.my-tifc.org">About Us <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">How</a>
+        <a class="nav-link" href="https://www.my-tifc.org">How</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Blog</a>
+        <a class="nav-link" href="https://www.my-tifc.org">Blog</a>
       </li>
 
       <!-- <li class="nav-item dropdown">
@@ -121,10 +122,10 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li> -->
     </ul>
-    <!-- <form class="form-inline my-2 my-lg-0" action="https://my-tifc.org/donate.html"> -->
+    <form class="form-inline my-2 my-lg-0">
       <!-- <input class="form-control mr-sm-2" type="search" placeholder="$" aria-label="Search"> -->
-      <a href="https://www.my-tifc.org/donate.html" class="aTagContrib"><button class="btn btn-outline-danger my-2 my-sm-0 contribute-button" type="submit">Contribute</button></a>
-    <!-- </form> -->
+      <button class="btn btn-outline-danger my-2 my-sm-0 contribute-button" type="submit">Contribute</button>
+    </form>
     </div>
     </nav>
 
@@ -132,162 +133,22 @@
 
   </section>
 
-
-
-
-<section class="landing">
-
-
-  <!-- <div class="container"> -->
-    <div class="logoImg">
-      <img src="imgs/logo.png"  id="logoImgReal" alt="" width="150px">
-    </div>
-
-
-  <div class="overlay">
-    <h1 id="mainTitle">
-      The Ilahi <br> Foundation Of <br> Canada
-    </h1>
-  </div>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100 bckgImg full-width" src="imgs/backgroundImg.png" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 bckgImg full-width" src="imgs/backgroundImg2.png" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 bckgImg full-width" src="imgs/backgroundImg3.png" alt="Second slide">
-      </div>
-    </div>
-    <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a> -->
-    <!-- <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a> -->
-  </div>
-</section>
-
-<section id="whatWeDo">
-  <div class="container">
-    <div class="row">
-      <h1 class="text-center pt-5">What We Do</h1>
-    </div>
-    <div class="row pt-3">
-      <div class="col-12 col-md-4 descriptionSection" data-aos="fade-zoom-in"
-     data-aos-easing="ease-in-back"
-     data-aos-delay="100"
-     data-aos-offset="0">
-        <h2>Education</h2>
-        <img src="imgs/education.png" class="clipartImages" alt="" width="70px">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis voluptatum enim tempore commodi ratione saepe quidem. Dolorem, sequi repudiandae consequatur?</p>
-
-      </div>
-      <div class="col-12 col-md-4 descriptionSection" data-aos="fade-zoom-in"
-     data-aos-easing="ease-in-back"
-     data-aos-delay="300"
-     data-aos-offset="0">
-        <h2>Food Bank</h2>
-        <img src="imgs/foodBank.jpg"  class="clipartImages" alt="" width="100px">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum odit, optio eos, ab sint voluptatibus error quia quo ullam repellat?</p>
-      </div>
-      <div class="col-12 col-md-4 descriptionSection"data-aos="fade-zoom-in"
-     data-aos-easing="ease-in-back"
-     data-aos-delay="500"
-     data-aos-offset="0">
-        <h2>Social Welfare</h2>
-        <img src="imgs/socialWelfare.jpg" class="clipartImages" alt="" width="100px">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at provident voluptates illum laboriosam non, dolorem iure molestiae, necessitatibus veritatis.</p>
-      </div>
-    </div>
-  </div>
-<!-- </div> -->
-</section>
-
-
-
-
-<section class="aid-tracker">
-  <div id="first-aid-box">
-    <img src="imgs/first-aid-box.png" alt="" width="150px">
-  </div>
+<section class="donation-form">
 
   <div class="container">
 
     <div class="row">
-      <div class="col-12 col-md-3">
-        <h2>Aid Tracker: </h2>
+      <div class="col-12 justify-content-center">
+        <h2 class="text-center pb-2">Donation Form</h1>
+        <script src="https://donorbox.org/widget.js" paypalExpress="false"></script>
+        <iframe src="https://donorbox.org/embed/tifc-fund" height="685px" width="100%" style="max-width:500px; min-width:310px; max-height:none!important" seamless="seamless" name="donorbox"
+          frameborder="0" scrolling="no" allowpaymentrequest></iframe>
       </div>
-      <div class="col-12 col-md-3">
-        <span class="big-number" id="valueOne">2</span>
-        <br>
-        <p>Wells Built</p>
-      </div>
-      <div class="col-12 col-md-3">
-        <span class="big-number" id="valueTwo">3</span>
-        <br>
-        <p>Schools Created</p>
-      </div>
-      <div class="col-12 col-md-3">
-        <span class="big-number" id="valueThree">35</span>
-        <br>
-        <p>Children Enrolled</p>
-      </div>
+
     </div>
-<div class="row updatedSinceRow">
-  <p>
-    Updated 10AM Today | Since Aug 2017
-  </p>
-</div>
-  </div>
-</section>
-
-
-
-<section class="why-care">
-  <div class="container">
-    <h1 class="pt-5">Why Care</h1>
-    <div class="item item--secondary" data-aos="fade-right" data-aos-anchor="#trigger-left" data-aos-anchor-placement="top-top">
-    <img src="imgs/waterInfoGraphic.png" class="animatedPictures" alt="" width="400px">
-    </div>
-
-    <div class="item item--primary" data-aos="fade-left" data-aos-anchor="#trigger-right" data-aos-anchor-placement="top-center">
-
-      <img src="imgs/pakistanMap.png" class="animatedPictures" alt="" width="400px">
-    </div>
-
-    <div class="item" id="trigger-left" data-aos="fade-up"><span>11.5% of people </span>defecate in the open.</div>
-    <div class="item" data-aos="fade-up">
-        <span>79 million people</span> lack decent toilets.
-    </div>
-    <div class="item" data-aos="fade-up"><span>45% of children</span> under the age of five are stunted.</div>
-    <div class="item" data-aos="fade-up"><span>22 million people </span> don’t have access to clean water close to home.</div>
-    <div class="item" id="trigger-right" data-aos="fade-up">
-        Pakistan is the sixth best country for improving access to decent toilets, <span>increasing coverage by 27%.</span>
-    </div>
-    <div class="item" data-aos="fade-up">Every <span>$1 invested in water and toilets </span> returns an average of $4 in increased productivity. <span class="citation">(WHO, 2012)</span></div>
-    <div class="item" data-aos="fade-up">In Pakistan, we reached over <span>77,000 people</span> with clean water, 200,000 with decent toilets and 220,000 with good hygiene between 2016 and 2017.</div>
-    <div class="item" data-aos="fade-up">Around the world up to 443 million school days are lost every year because of water-related illnesses. <span class="citation">(Human Development Report, 2006)</span></div>
-    <div class="item" data-aos="fade-up">If everyone, everywhere had clean water, the number of diarrhoeal deaths would be cut by a third. <span class="citation">(Tropical Medicine and International Health, 2014)</span></div>
-    <div class="item" data-aos="fade-up">The World Bank says promoting good hygiene is one of the most cost effective health interventions.<span class="citation">(Disease Control Priorities, third edition (volume 2), 2016)<span></div>
-    <div class="item" data-aos="fade-up"><span>98% of the richest </span>people and only 79.2% of the poorest people in Pakistan have clean water.</div>
-    <div class="item" data-aos="fade-up"><span>19,500 children</span> under five die each year from diarrhoeal related diseases</div>
   </div>
 
-
 </section>
-
-
-
 
 <footer class="justify-content-center py-2 websiteFooter">
 
@@ -308,12 +169,7 @@
       </div>
 
       <div class="col-12 col-md-2 justify-content-center align-self-center order-2 order-md-3 text-center">
-        <!-- <form class="form-inline my-2 my-lg-0" action="https://my-tifc.org/donate.html" METHOD="POST"> -->
-          <!-- <input class="form-control mr-sm-2" type="search" placeholder="$" aria-label="Search"> -->
-          <!-- <button class="btn btn-outline-danger my-2 my-sm-0 contribute-button" type="submit">Contribute</button> -->
-          <a href="https://my-tifc.org/donate.html"><button type="submit" class="btn btn-danger contribute-button">Contribute</button></a>
-        <!-- </form> -->
-
+      <button type="button" class="btn btn-danger contribute-button">Contribute</button>
       </div>
 
     </div>
