--- a/index.html
+++ b/index.html
@@ -372,6 +372,12 @@ var val3 = document.getElementById("valueOne");
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 
+<!-- MAKE THE Menu Toggle Bar work -->
+<script type="text/javascript">
+  $(".example5").click(function(){ $(this).toggleClass("open"); });
+
+</script>
+
 <!-- AOS ANIMATE -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
