updated content, updated navbar and donorbox

--- a/index.html
+++ b/index.html
@@ -96,30 +96,26 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="">Our Mission</a>
+      </li>
       <li class="nav-item active">
-        <a class="nav-link" href="">About Us <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="">How</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="">Blog</a>
+        <a class="nav-link" href="">Islamic Education <span class="sr-only">(current)</span></a>
       </li>
 
-      <!-- <li class="nav-item dropdown">
+
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Our Projects
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Education</a>
+          <a class="dropdown-item" href="#">Food Bank</a>
+          <a class="dropdown-item" href="#">Social Welfare</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">Volunteer</a>
         </div>
-      </li> -->
-      <!-- <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li> -->
+      </li>
     </ul>
     <!-- <form class="form-inline my-2 my-lg-0" action="https://my-tifc.org/donate.html"> -->
       <!-- <input class="form-control mr-sm-2" type="search" placeholder="$" aria-label="Search"> -->
@@ -189,7 +185,7 @@
      data-aos-offset="0">
         <h2>Education</h2>
         <img src="imgs/education.png" class="clipartImages" alt="" width="70px">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis voluptatum enim tempore commodi ratione saepe quidem. Dolorem, sequi repudiandae consequatur?</p>
+        <p>The Ilahi Foundation has partnered with ISHRAQ Schooling System (ISS) to ensure children from poor backgrounds are receiving proper education in a safe environment. ISS is a non-profit and non-commercial institution which focuses on educating children with less privileges in a competitive standard to make them excel in knowledge, character, and positive action. </p>
 
       </div>
       <div class="col-12 col-md-4 descriptionSection" data-aos="fade-zoom-in"
@@ -198,7 +194,7 @@
      data-aos-offset="0">
         <h2>Food Bank</h2>
         <img src="imgs/foodBank.jpg"  class="clipartImages" alt="" width="100px">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum odit, optio eos, ab sint voluptatibus error quia quo ullam repellat?</p>
+        <p>TIFC is committed to help those in need of food. Our goal is to provide food and supplies to less-fortunate families across the globe. We aim to collect and provide at least $50 a month to ensure the needs of poor families.</p>
       </div>
       <div class="col-12 col-md-4 descriptionSection"data-aos="fade-zoom-in"
      data-aos-easing="ease-in-back"
@@ -206,7 +202,7 @@
      data-aos-offset="0">
         <h2>Social Welfare</h2>
         <img src="imgs/socialWelfare.jpg" class="clipartImages" alt="" width="100px">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at provident voluptates illum laboriosam non, dolorem iure molestiae, necessitatibus veritatis.</p>
+        <p>Our recent and ongoing projects include building wells and providing clean drinking water in poor communities across the globe. TIFC has initiated a water supply system, Sabeel-e-Rehmat (SER), to ensure that clean drinking water is being provided to poor communities around the world.</p>
       </div>
     </div>
   </div>
