--- a/donate.html
+++ b/donate.html
@@ -97,30 +97,29 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.my-tifc.org">Our Mission</a>
+      </li>
       <li class="nav-item active">
-        <a class="nav-link" href="https://www.my-tifc.org">About Us <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://www.my-tifc.org">How</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://www.my-tifc.org">Blog</a>
+        <a class="nav-link" href="https://www.my-tifc.org">Islamic Education <span class="sr-only">(current)</span></a>
       </li>
 
-      <!-- <li class="nav-item dropdown">
+
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Our Projects
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="https://www.my-tifc.org">Education</a>
+          <a class="dropdown-item" href="https://www.my-tifc.org">Food Bank</a>
+          <a class="dropdown-item" href="https://www.my-tifc.org">Social Welfare</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="https://www.my-tifc.org">Volunteer</a>
         </div>
-      </li> -->
-      <!-- <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li> -->
+      </li>
+
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <!-- <input class="form-control mr-sm-2" type="search" placeholder="$" aria-label="Search"> -->
