added mission page

--- a/donate.html
+++ b/donate.html
@@ -99,10 +99,10 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item">
-        <a class="nav-link" href="https://www.my-tifc.org">Our Mission</a>
+        <a class="nav-link" href="https://www.my-tifc.org/mission.html">Our Mission</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="https://www.my-tifc.org">Islamic Education <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://www.my-tifc.org/islamEdu.html">Islamic Education <span class="sr-only">(current)</span></a>
       </li>
 
 
@@ -121,10 +121,7 @@
 
 
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <!-- <input class="form-control mr-sm-2" type="search" placeholder="$" aria-label="Search"> -->
-      <button class="btn btn-outline-danger my-2 my-sm-0 contribute-button" type="submit">Contribute</button>
-    </form>
+  <a href="https://my-tifc.org/donate.html"><button type="submit" class="btn btn-danger contribute-button">Contribute</button></a>
     </div>
     </nav>
 
@@ -168,7 +165,7 @@
       </div>
 
       <div class="col-12 col-md-2 justify-content-center align-self-center order-2 order-md-3 text-center">
-      <button type="button" class="btn btn-danger contribute-button">Contribute</button>
+        <a href="https://my-tifc.org/donate.html"><button type="submit" class="btn btn-danger contribute-button">Contribute</button></a>
       </div>
 
     </div>
@@ -180,7 +177,7 @@
 </footer>
 
 <section class="datalchemyFooter">
-  <div class="row justify-content-center pt-3">
+  <div class="row justify-content-center">
           <p>powered by <a href="http://datalchemy.ai">datalchemy.ai <img src="imgs/datalchemyLogo.png" alt="" width="20px"></a></p>
   </div>
 </section>
