--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="">Our Mission</a>
+        <a class="nav-link" href="https://www.my-tifc.org/mission.html">Our Mission</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="islamEdu.html">Islamic Education <span class="sr-only">(current)</span></a>
@@ -321,7 +321,7 @@
 </footer>
 
 <section class="datalchemyFooter">
-  <div class="row justify-content-center pt-3">
+  <div class="row justify-content-center">
           <p>powered by <a href="http://datalchemy.ai">datalchemy.ai <img src="imgs/datalchemyLogo.png" alt="" width="20px"></a></p>
   </div>
 </section>
