--- a/mission.html
+++ b/mission.html
@@ -39,7 +39,7 @@
 
 <!--  ############################################################################################################################################################################################# -->
   <!-- Primary Meta Tags -->
-  <title>TIFC - Islamic Education</title>
+  <title>TIFC - Mission</title>
   <meta name="title" content="The Ilahi Foundation of Canada">
   <meta name="description" content="Helping the needy, one city at a time">
   <meta name="keywords" content="Pakistan, Clean Water, education">
@@ -67,6 +67,8 @@
   <!-- GOOGLE FONTS UPLOAD -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Coustard&display=swap" rel="stylesheet">
+
 
 <!-- AOS CSS -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -75,12 +77,12 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="app.css">
-  <link rel="stylesheet" href="donate.css">
-    <link rel="stylesheet" href="islamicEdu.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
+<!-- Custom CSS -->
+<link rel="stylesheet" href="app.css">
+<link rel="stylesheet" href="donate.css">
+<link rel="stylesheet" href="islamicEdu.css">
+<link rel="stylesheet" href="mission.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 </head>
 
@@ -100,9 +102,9 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item">
-        <a class="nav-link" href="https://www.my-tifc.org/mission.html">Our Mission</a>
+        <a class="nav-link active" href="https://www.my-tifc.org/mission.html">Our Mission</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="https://www.my-tifc.org/islamEdu.html">Islamic Education <span class="sr-only">(current)</span></a>
       </li>
 
@@ -133,93 +135,67 @@
 
   </section>
 
-<section class="courses-section">
-
+<section class="mission-top">
   <div class="container">
-<div class="row islamiccoursetitle">
-  <h1 class="text-center">Courses</h1>
-</div>
-
     <div class="row">
-      <div class="col-sm-4">
-        <div data-aos="zoom-in">
-
-        <div class="card">
-          <div style=" width:100%; text-align:center">
-          <img class="card-img-top" src="imgs/Tajweed.png" alt="Card image cap" >
-               </div>
-          <div class="card-body">
-            <h5 class="card-title">Tajweed course</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe maxime eveniet tempora similique labore omnis doloremque voluptatem, dolores tempore eligendi.</p>
-            <a href="#" class="btn btn-primary startCourse">Start Course</a>
-          </div>
-        </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" data-aos="zoom-in">
-            <div style=" width:100%; text-align:center">
-          <img class="card-img-top" src="imgs/Tajweed.png" alt="Card image cap" >
-        </div>
-          <div class="card-body">
-            <h5 class="card-title">Aalimah course</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, a, praesentium. Nam sunt recusandae nobis?</p>
-            <a href="#" class="btn btn-primary startCourse">Start Course</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" data-aos="zoom-in">
-          <div style=" width:100%; text-align:center">
-         <img class="card-img-top" src="imgs/logo.png" alt="Card image cap" >
-       </div>
-          <div class="card-body">
-            <h5 class="card-title">Tafseer course</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nisi expedita asperiores harum, non odit, odio iusto.</p>
-            <a href="#" class="btn btn-primary">Beginners</a>
-            <a href="#" class="btn btn-primary">Advanced</a>
-          </div>
-        </div>
+      <div class="col-12">
+        <h1 class="pt-5 text-center">The Ilahi Foundation's <br> Mission</h1>
       </div>
     </div>
-
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="card" data-aos="zoom-in">
-           <div style=" width:100%; text-align:center">
-          <img class="card-img-top" src="imgs/logo.png" alt="Card image cap" >
-        </div>
-          <div class="card-body">
-            <h5 class="card-title">Islamic Studies</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, temporibus beatae illo adipisci.</p>
-            <a href="#" class="btn btn-primary">English</a>
-            <a href="#" class="btn btn-primary">Urdu</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" data-aos="zoom-in">
-          <div style=" width:100%; text-align:center">
-         <img class="card-img-top" src="imgs/logo.png" alt="Card image cap" >
-       </div>
-          <div class="card-body">
-            <h5 class="card-title">Arabic Grammar</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus laborum quaerat eum similique sapiente amet dolor officia repellat fugiat, facere voluptatibus praesentium vitae optio labore.</p>
-            <a href="#" class="btn btn-primary">Beginners</a>
-            <a href="#" class="btn btn-primary">Advanced</a>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
   </div>
 
 </section>
 
+
+<section class="firstPara pt-5">
+  <div class="container ">
+    <div class="row text-center justify-content-center">
+      <!-- <div class="col-2"></div> -->
+      <div class="col-12 col-md-8">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum modi illum praesentium. Veniam expedita sint veritatis, nemo commodi sequi! Quibusdam illum, nesciunt obcaecati suscipit quis hic reprehenderit quas, alias quam quisquam nihil
+          blanditiis quae dolor quo nobis ducimus officiis aliquam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, eius incidunt repudiandae ducimus distinctio voluptatibus aliquid iure non ipsam blanditiis tempore impedit porro magni quos itaque optio magnam fuga id corporis. Sed
+          quaerat culpa, vel veritatis sunt eaque ea vitae pariatur dolores laudantium quidem quo numquam nihil corporis. Dolor, cum!</p>
+      </div>
+      <!-- <div class="col-2"></div> -->
+    </div>
+  </div>
+
+  <div class="container-flex withPic py-5">
+<img src="imgs/missionPic.png" alt="mission Pic" style="width:100%;">
+
+
+
+    <div class="centered">
+      <span class="quote">"</span>Mankind, were but one community<span class="quote">"</span>
+      <span class="refrence">{10:19}</span>
+      <br>Our Goal is to serve humanity
+    </div>
+
+    <a href="https://my-tifc.org/donate.html"><button type="submit" class="btn btn-danger contribute-button">Support The Cause</button></a>
+
+
+
+  </div>
+
+  <div class="container py-2">
+    <div class="row text-center justify-content-center">
+      <!-- <div class="col-2"></div> -->
+      <div class="col-12 col-md-8">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum modi illum praesentium. Veniam expedita sint veritatis, nemo commodi sequi! Quibusdam illum, nesciunt obcaecati suscipit quis hic reprehenderit quas, alias quam quisquam nihil
+          blanditiis quae dolor quo nobis ducimus officiis aliquam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, eius incidunt repudiandae ducimus distinctio voluptatibus aliquid iure non ipsam blanditiis tempore impedit porro magni quos itaque optio magnam fuga id corporis. Sed
+          quaerat culpa, vel veritatis sunt eaque ea vitae pariatur dolores laudantium quidem quo numquam nihil corporis. Dolor, cum!</p>
+      </div>
+      <!-- <div class="col-2"></div> -->
+    </div>
+  </div>
+
+</section>
+
+
+
 <footer class="justify-content-center py-2 websiteFooter">
-
-
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-2 order-3 order-md-1 text-center">
