--- a/mission.html
+++ b/mission.html
@@ -84,6 +84,13 @@
 <link rel="stylesheet" href="mission.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
+<!-- MAPPING Resources -->
+<script src="https://www.amcharts.com/lib/4/core.js"></script>
+<script src="https://www.amcharts.com/lib/4/maps.js"></script>
+<script src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script>
+<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+
+
 </head>
 
 <body id="bootstrap-override">
@@ -194,6 +201,105 @@
 </section>
 
 
+<section class="map">
+  <!-- Chart code -->
+<script>
+am4core.ready(function() {
+
+// Themes begin
+am4core.useTheme(am4themes_animated);
+// Themes end
+
+/* Create map instance */
+var chart = am4core.create("chartdiv", am4maps.MapChart);
+
+/* Set map definition */
+chart.geodata = am4geodata_worldLow;
+
+/* Set projection */
+chart.projection = new am4maps.projections.Miller();
+
+/* Create map polygon series */
+var polygonSeries = chart.series.push(new am4maps.MapPolygonSeries());
+
+/* Make map load polygon (like country names) data from GeoJSON */
+polygonSeries.useGeodata = true;
+
+/* Configure series */
+var polygonTemplate = polygonSeries.mapPolygons.template;
+polygonTemplate.applyOnClones = true;
+polygonTemplate.togglable = true;
+polygonTemplate.tooltipText = "{name}";
+polygonTemplate.nonScalingStroke = true;
+polygonTemplate.strokeOpacity = 0.5;
+polygonTemplate.fill = chart.colors.getIndex(0);
+var lastSelected;
+polygonTemplate.events.on("hit", function(ev) {
+  if (lastSelected) {
+    // This line serves multiple purposes:
+    // 1. Clicking a country twice actually de-activates, the line below
+    //    de-activates it in advance, so the toggle then re-activates, making it
+    //    appear as if it was never de-activated to begin with.
+    // 2. Previously activated countries should be de-activated.
+    lastSelected.isActive = false;
+  }
+  ev.target.series.chart.zoomToMapObject(ev.target);
+  if (lastSelected !== ev.target) {
+    lastSelected = ev.target;
+  }
+})
+
+
+/* Create selected and hover states and set alternative fill color */
+var ss = polygonTemplate.states.create("active");
+ss.properties.fill = chart.colors.getIndex(2);
+
+var hs = polygonTemplate.states.create("hover");
+hs.properties.fill = chart.colors.getIndex(4);
+
+// Hide Antarctica
+polygonSeries.exclude = ["AQ"];
+
+// Small map
+chart.smallMap = new am4maps.SmallMap();
+// Re-position to top right (it defaults to bottom left)
+chart.smallMap.align = "right";
+chart.smallMap.valign = "top";
+chart.smallMap.series.push(polygonSeries);
+
+// Zoom control
+chart.zoomControl = new am4maps.ZoomControl();
+
+var homeButton = new am4core.Button();
+homeButton.events.on("hit", function(){
+  chart.goHome();
+});
+
+homeButton.icon = new am4core.Sprite();
+homeButton.padding(7, 5, 7, 5);
+homeButton.width = 30;
+homeButton.icon.path = "M16,8 L14,8 L14,16 L10,16 L10,10 L6,10 L6,16 L2,16 L2,8 L0,8 L8,0 L16,8 Z M16,8";
+homeButton.marginBottom = 10;
+homeButton.parent = chart.zoomControl;
+homeButton.insertBefore(chart.zoomControl.plusButton);
+
+}); // end am4core.ready()
+</script>
+
+<!-- HTML -->
+<div class="container pt-5">
+  <div class="row justify-content-center align-items-center">
+    <div class="col-12 col-md-8">
+      <h2 class="text-center">Where we work</h1>
+      <div id="chartdiv"></div>
+    </div>
+  </div>
+</div>
+
+
+</section>
+
+
 
 <footer class="justify-content-center py-2 websiteFooter">
   <div class="container">
@@ -232,37 +338,6 @@
 
 
 
-<!-- NUMBER TICKER -->
-
-<script>
-  function animateValue(id, start, end, duration) {
-    var range = end - start;
-    var current = start;
-    var increment = end > start ? 1 : -1;
-    var stepTime = Math.abs(Math.floor(duration / range));
-    var obj = document.getElementById(id);
-    var timer = setInterval(function() {
-      current += increment;
-      obj.innerHTML = current;
-      if (current == end) {
-        clearInterval(timer);
-      }
-    }, stepTime);
-  }
-
-var val1 = document.getElementById("valueOne");
-var val2 = document.getElementById("valueOne");
-var val3 = document.getElementById("valueOne");
-
-  val1.addEventListener = ("scroll", animateValue("valueOne", 0, 40, 5000))
-  document.getElementById("valueTwo").onscroll =  animateValue("valueTwo", 0, 70, 5000);
-  document.getElementById("valueThree").onscroll =  animateValue("valueThree", 0, 500, 5000);
-
-  //
-  //
-  // animateValue("valueTwo", 0, 300, 3000);
-  // animateValue("valueThree", 0, 350, 3500);
-</script>
 
 
 <!-- ENDING TAGS -->
