added home page button

--- a/mission.html
+++ b/mission.html
@@ -98,7 +98,7 @@
 
       <nav class="navbar fixed-top navbar-expand-lg" data-options="scrolltop:false">
         <div class="container">
-    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <a class="navbar-brand" href="https://www.my-tifc.org/"><i class="fas fa-home"></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <!-- <span class="navbar-toggler-icon"></span> -->
     <a href="javascript:void(0);" class="menu example5"><span></span></a>
