--- a/donate.html
+++ b/donate.html
@@ -88,7 +88,7 @@
 
       <nav class="navbar fixed-top navbar-expand-lg" data-options="scrolltop:false">
         <div class="container">
-    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <a class="navbar-brand" href="https://www.my-tifc.org/"><i class="fas fa-home"></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <!-- <span class="navbar-toggler-icon"></span> -->
     <a href="javascript:void(0);" class="menu example5"><span></span></a>
@@ -102,7 +102,7 @@
         <a class="nav-link" href="https://www.my-tifc.org/mission.html">Our Mission</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="https://www.my-tifc.org/islamEdu.html">Islamic Education <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://www.my-tifc.org/islamEdu.html">Islamic Education<span class="sr-only">(current)</span></a>
       </li>
 
 
@@ -121,7 +121,7 @@
 
 
     </ul>
-  <a href="https://my-tifc.org/donate.html"><button type="submit" class="btn btn-danger contribute-button">Contribute</button></a>
+    <a href="https://my-tifc.org/donate.html" class="aTagContrib"><button type="submit" class="btn btn-danger contribute-button">Contribute</button></a>
     </div>
     </nav>
 
